include/sonare/sonare_c_effects.h


typedef struct {
  int32_t struct_version;
  float segmentation_threshold_cents;
  float min_note_ms;
  float reference_hz;
  float voiced_threshold;
} SonareNoteExtractorConfig;
typedef struct {
  int32_t struct_version;
  float fade_ms;
  float vibrato_cutoff_hz;
} SonareNoteRenderConfig;
typedef struct {
  int64_t time_offset_samples;
  int64_t envelope_offset;
  size_t envelope_count;
  float pitch_shift_semitones;
  float gain_db;
  float time_stretch_ratio;
  float formant_shift_semitones;
  float vibrato_depth_change;
  float drift_change;
  int32_t muted;
} SonareNoteEdit;
typedef struct {
  int64_t onset_sample;
  int64_t offset_sample;
  int64_t amplitude_offset;
  int32_t frame_start;
  int32_t frame_end;
  float median_hz;
  float median_cents;
  float f0_stability;
  SonareNoteEdit edit;
} SonareNoteObject;
typedef struct {
  SonareNoteObject* notes;
  size_t count;
  float* amplitude;
  size_t amplitude_count;
  float* envelopes;
  size_t envelope_count;
} SonareNoteObjectsResult;
typedef struct {
  float centre_hz;
  float* drift_cents;
  float* vibrato_cents;
  size_t count;
} SonarePitchDecompositionResult;
SonareError sonare_decompose_note_pitch(const float* f0_hz, size_t n_frames, float frame_rate,
                                        float median_hz, float vibrato_cutoff_hz,
                                        SonarePitchDecompositionResult* out);
void sonare_free_pitch_decomposition(SonarePitchDecompositionResult* result);
SonareError sonare_split_note(const float* samples, size_t length, int sample_rate,
                              const float* f0_hz, const float* voiced_prob, const int32_t* voiced,
                              size_t n_frames, float frame_rate,
                              const SonareNoteExtractorConfig* config,
                              const SonareNoteObject* notes, size_t note_count,
                              const float* envelopes, size_t envelope_count, size_t index,
                              int32_t frame, SonareNoteObjectsResult* out);
SonareError sonare_merge_notes(const float* samples, size_t length, int sample_rate,
                               const float* f0_hz, const float* voiced_prob, const int32_t* voiced,
                               size_t n_frames, float frame_rate,
                               const SonareNoteExtractorConfig* config,
                               const SonareNoteObject* notes, size_t note_count,
                               const float* envelopes, size_t envelope_count, size_t first,
                               size_t last, SonareNoteObjectsResult* out);
typedef struct {
  int32_t struct_version;
  int32_t n_fft;
  int32_t hop_length;
  int32_t hpss_kernel_harmonic;
  int32_t hpss_kernel_percussive;
  int32_t onset_wait;
  float onset_delta;
  float max_event_ms;
  float min_percussive_ratio;
} SonarePercussiveEventConfig;
typedef struct {
  int32_t struct_version;
  int32_t n_fft;
  int32_t hop_length;
  int32_t hpss_kernel_harmonic;
  int32_t hpss_kernel_percussive;
  float fade_ms;
} SonarePercussiveRenderConfig;
typedef struct {
  int64_t time_offset_samples;
  float gain_db;
  int32_t muted;
} SonarePercussiveEventEdit;
typedef struct {
  int64_t onset_sample;
  int64_t offset_sample;
  float strength;
  float peak_amplitude;
  float percussive_ratio;
  SonarePercussiveEventEdit edit;
} SonarePercussiveEvent;
typedef struct {
  SonarePercussiveEvent* events;
  size_t count;
} SonarePercussiveEventsResult;
SonareError sonare_extract_percussive_events(const float* samples, size_t length, int sample_rate,
                                             const SonarePercussiveEventConfig* config,
                                             SonarePercussiveEventsResult* out);
void sonare_free_percussive_events(SonarePercussiveEventsResult* result);
SonareError sonare_render_percussive_events(const float* samples, size_t length, int sample_rate,
                                            const SonarePercussiveEvent* events, size_t count,
                                            const SonarePercussiveRenderConfig* config, float** out,
                                            size_t* out_length);
SonareError sonare_voice_change(const float* samples, size_t length, int sample_rate,
                                float pitch_semitones, float formant_factor, float** out,
                                size_t* out_length);
SonareError sonare_voice_change_realtime(const float* samples, size_t length, int sample_rate,
                                         const char* preset, int channels, float** out,
                                         size_t* out_length);