include/sonare/sonare_c_polyphony.h


typedef struct SonarePolyphonicAnalysis SonarePolyphonicAnalysis;
typedef struct {
  int32_t struct_version;
  int32_t n_fft;      
  int32_t hop_length; 
  int32_t win_length; 
  float cent_ref_hz;    
  float cents_per_bin;  
  float cent_max_hz;    
  int32_t tonality_off; 
  int32_t salience_harmonics;   
  float f0_min_hz;              
  float f0_max_hz;              
  float salience_alpha_hz;      
  float salience_beta_hz;       
  float salience_inharmonicity; 
  int32_t max_polyphony;      
  float min_frame_peak_ratio; 
  float min_separation_cents; 
  float subtraction_factor;   
  float max_jump_cents;        
  float min_ridge_peak_ratio;  
  float min_ridge_duration_ms; 
  int32_t mask_harmonics; 
  float claim_lobes;      
  float inharmonicity;
  int32_t estimate_inharmonicity;
  int32_t inharmonicity_min_partials;    
  float inharmonicity_max_residual_bins; 
  float inharmonicity_max_stretch;       
  int32_t window_frames;        
  float min_partial_separation; 
  float max_fit_residual;       
  float max_weight_modulus;
  float max_refine_hz;      
  float f0_tolerance_cents; 
  float segmentation_threshold_cents; 
  float min_note_ms;                  
  float reference_hz;                 
} SonarePolyphonicConfig;
SonareError sonare_polyphonic_analyze(const float* samples, size_t length, int sample_rate,
                                      const SonarePolyphonicConfig* config,
                                      SonarePolyphonicAnalysis** out);
void sonare_polyphonic_analysis_destroy(SonarePolyphonicAnalysis* analysis);
SonareError sonare_polyphonic_note_count(const SonarePolyphonicAnalysis* analysis,
                                         size_t* out_count);
SonareError sonare_polyphonic_frame_count(const SonarePolyphonicAnalysis* analysis,
                                          int32_t* out_count);
SonareError sonare_polyphonic_notes(const SonarePolyphonicAnalysis* analysis, SonareNoteObject* out,
                                    size_t capacity, size_t* out_count);
SonareError sonare_polyphonic_set_note_edit(SonarePolyphonicAnalysis* analysis, size_t note,
                                            const SonareNoteEdit* edit, const float* envelope,
                                            size_t envelope_count);
SonareError sonare_polyphonic_polyphony(const SonarePolyphonicAnalysis* analysis, int32_t* out,
                                        size_t capacity, size_t* out_count);
SonareError sonare_polyphonic_note_f0(const SonarePolyphonicAnalysis* analysis, size_t note,
                                      float* out, size_t capacity, size_t* out_count);
SonareError sonare_polyphonic_note_amplitude(const SonarePolyphonicAnalysis* analysis, size_t note,
                                             float* out, size_t capacity, size_t* out_count);
SonareError sonare_polyphonic_note_salience(const SonarePolyphonicAnalysis* analysis, size_t note,
                                            float* out, size_t capacity, size_t* out_count);
SonareError sonare_polyphonic_note_envelope(const SonarePolyphonicAnalysis* analysis, size_t note,
                                            float* out, size_t capacity, size_t* out_count);
SonareError sonare_polyphonic_note_inharmonicity(const SonarePolyphonicAnalysis* analysis,
                                                 float* out, size_t capacity, size_t* out_count);
SonareError sonare_polyphonic_render(const SonarePolyphonicAnalysis* analysis,
                                     const SonareNoteRenderConfig* config, float** out,
                                     size_t* out_length);