bindings/python/src/libsonare/_ffi_signatures_effects.py


    # sonare_polyphonic_* (the handle door onto the same note objects)
    if hasattr(lib, "sonare_polyphonic_analyze"):
        lib.sonare_polyphonic_analyze.restype = ctypes.c_int32
        lib.sonare_polyphonic_analyze.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(SonarePolyphonicConfig),
            ctypes.POINTER(ctypes.c_void_p),
        ]
        lib.sonare_polyphonic_analysis_destroy.restype = None
        lib.sonare_polyphonic_analysis_destroy.argtypes = [ctypes.c_void_p]
        lib.sonare_polyphonic_note_count.restype = ctypes.c_int32
        lib.sonare_polyphonic_note_count.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_size_t),
        ]
        lib.sonare_polyphonic_frame_count.restype = ctypes.c_int32
        lib.sonare_polyphonic_frame_count.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_int32),
        ]
        lib.sonare_polyphonic_notes.restype = ctypes.c_int32
        lib.sonare_polyphonic_notes.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareNoteObject),
            ctypes.c_size_t,
            ctypes.POINTER(ctypes.c_size_t),
        ]
        lib.sonare_polyphonic_set_note_edit.restype = ctypes.c_int32
        lib.sonare_polyphonic_set_note_edit.argtypes = [
            ctypes.c_void_p,
            ctypes.c_size_t,
            ctypes.POINTER(SonareNoteEdit),
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
        ]
        lib.sonare_polyphonic_polyphony.restype = ctypes.c_int32
        lib.sonare_polyphonic_polyphony.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_int32),
            ctypes.c_size_t,
            ctypes.POINTER(ctypes.c_size_t),
        ]
        for curve in (
            "sonare_polyphonic_note_f0",
            "sonare_polyphonic_note_amplitude",
            "sonare_polyphonic_note_salience",
            "sonare_polyphonic_note_envelope",
        ):
            getattr(lib, curve).restype = ctypes.c_int32
            getattr(lib, curve).argtypes = [
                ctypes.c_void_p,
                ctypes.c_size_t,
                ctypes.POINTER(ctypes.c_float),
                ctypes.c_size_t,
                ctypes.POINTER(ctypes.c_size_t),
            ]
        # Whole-array out like the polyphony above rather than per-note like the
        # curves: one entry per note, so it takes no note index.
        lib.sonare_polyphonic_note_inharmonicity.restype = ctypes.c_int32
        lib.sonare_polyphonic_note_inharmonicity.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.POINTER(ctypes.c_size_t),
        ]
        lib.sonare_polyphonic_render.restype = ctypes.c_int32
        lib.sonare_polyphonic_render.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareNoteRenderConfig),
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]

    # sonare_transcribe + sonare_free_transcribe_result. The defaults accessor
    # returns the config by value; the facade spells a default as None and
    # leaves the field 0, so it is declared rather than called.
    if hasattr(lib, "sonare_transcribe"):
        lib.sonare_transcribe_config_default.restype = SonareTranscribeConfig
        lib.sonare_transcribe_config_default.argtypes = []
        lib.sonare_transcribe.restype = ctypes.c_int32
        lib.sonare_transcribe.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.POINTER(SonareTranscribeConfig),
            ctypes.POINTER(SonareTranscribeResult),
        ]
        lib.sonare_free_transcribe_result.restype = None
        lib.sonare_free_transcribe_result.argtypes = [ctypes.POINTER(SonareTranscribeResult)]

    # sonare_extract_percussive_events + sonare_free_percussive_events
    # + sonare_render_percussive_events
    if hasattr(lib, "sonare_extract_percussive_events"):
        lib.sonare_extract_percussive_events.restype = ctypes.c_int32
        lib.sonare_extract_percussive_events.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(SonarePercussiveEventConfig),
            ctypes.POINTER(SonarePercussiveEventsResult),
        ]
        lib.sonare_free_percussive_events.restype = None
        lib.sonare_free_percussive_events.argtypes = [
            ctypes.POINTER(SonarePercussiveEventsResult),
        ]
        lib.sonare_render_percussive_events.restype = ctypes.c_int32
        lib.sonare_render_percussive_events.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(SonarePercussiveEvent),
            ctypes.c_size_t,
            ctypes.POINTER(SonarePercussiveRenderConfig),
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]

    # sonare_decompose_note_pitch + sonare_free_pitch_decomposition
    if hasattr(lib, "sonare_decompose_note_pitch"):
        lib.sonare_decompose_note_pitch.restype = ctypes.c_int32
        lib.sonare_decompose_note_pitch.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_float,
            ctypes.c_float,
            ctypes.c_float,
            ctypes.POINTER(SonarePitchDecompositionResult),
        ]
        lib.sonare_free_pitch_decomposition.restype = None
        lib.sonare_free_pitch_decomposition.argtypes = [
            ctypes.POINTER(SonarePitchDecompositionResult),
        ]

    # sonare_split_note + sonare_merge_notes. The two take the same arguments
    # apart from the cut they describe, so only the tail differs.
    _note_set_edit_argtypes: list[Any] = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.c_float),
        ctypes.POINTER(ctypes.c_float),
        ctypes.POINTER(ctypes.c_int32),
        ctypes.c_size_t,
        ctypes.c_float,
        ctypes.POINTER(SonareNoteExtractorConfig),
        ctypes.POINTER(SonareNoteObject),
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
    ]
    if hasattr(lib, "sonare_split_note"):
        lib.sonare_split_note.restype = ctypes.c_int32
        lib.sonare_split_note.argtypes = [
            *_note_set_edit_argtypes,
            ctypes.c_size_t,
            ctypes.c_int32,
            ctypes.POINTER(SonareNoteObjectsResult),
        ]
    if hasattr(lib, "sonare_merge_notes"):
        lib.sonare_merge_notes.restype = ctypes.c_int32
        lib.sonare_merge_notes.argtypes = [
            *_note_set_edit_argtypes,
            ctypes.c_size_t,
            ctypes.c_size_t,
            ctypes.POINTER(SonareNoteObjectsResult),
        ]

    # sonare_voice_change
    lib.sonare_voice_change.restype = ctypes.c_int32
    lib.sonare_voice_change.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_voice_change_realtime.restype = ctypes.c_int32
    lib.sonare_voice_change_realtime.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]
